--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "LewdHuTao",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "path": "^0.12.7",
-    "useragent": "^2.3.0"
+    "useragent": "^2.3.0",
+    "ytmusic-api": "^5.3.0"
   },
   "repository": {
     "type": "git",
@@ -28,11 +31,11 @@
   },
   "homepage": "https://github.com/shittybot/llyrics-api#readme",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.9",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.2.1",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.13.1",
     "@types/useragent": "^2.3.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.7.3"
   }
 }
